# app/Http/Controllers/Api/ImportController.php
@@ -3,6 +3,7 @@
 namespace App\Http\Controllers\Api;
 
 use App\Http\Controllers\Controller;
+use App\Imports\AlokasiImport;
 use App\Imports\UsersImport;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Auth;
@@ -19,17 +20,9 @@ class ImportController extends Controller
             'email' => 'admin@bpssumsel.com',
             'password' => "@bps1600",
         ];
-
         if (Auth::attempt($credentials)) {
             $request->session()->regenerate();
             $auth = Auth::user();
-            // if ($auth->hasRole('PENCACAH')) {
-            //     return redirect('pcl_dashboard');
-            // } else if ($auth->hasRole('PENGAWAS')) {
-            //     return redirect('pml_dashboard');
-            // } else {
-            //     return redirect('/');
-            // }
             $token = $request->user()->createToken("be_st2023");
 
             echo  $token->plainTextToken;
@@ -77,24 +70,70 @@ class ImportController extends Controller
     {
         if ($request->file('import_file')) {
             Excel::import(new UsersImport, request()->file('import_file'));
-            return 'Berhasil Memasukkan data';
-            // return redirect()->back()->with('success', 'Berhasil Memasukkan data');
+            // return 'Berhasil Memasukkan data';
+            return redirect()->back()->with('success', 'Berhasil Memasukkan data');
         } else {
-            return 'Kesalahan File';
+            // return 'Kesalahan File';
             return redirect()->back()->with('error', 'Kesalahan File');
         }
     }
 
 
-    public function make_roles()
+    /**
+     * @OA\Post(
+     *     path="/api/impot_alokasi",
+     *     tags={"import"},
+     *     summary="Import Alokasi Petugas",
+     *     description="Import Daftar SLS yang sudah berisi alokasi petugas (PCL, PML, Koseka), bisa dari export SLS pada halaman yang sama",
+     *     operationId="import_alokasi",
+     *     @OA\Parameter(
+     *          name="Bearer Token",
+     *          description="",
+     *          required=true,
+     *          in="header",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *     ),
+     *     @OA\RequestBody(
+     *         description="File to upload",
+     *         required=true,
+     *         @OA\MediaType(
+     *             mediaType="multipart/form-data",
+     *             @OA\Schema(
+     *                 required={"import_file"},
+     *                @OA\Property(property="import_file", type="file"),
+     *
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="File uploaded successfully"
+     *     )
+     * )
+     */
+    public function import_alokasi(Request $request)
     {
-        $role = Role::create(['name' => 'PPL']);
-        $role = Role::create(['name' => 'PML']);
-        $role = Role::create(['name' => 'Koseka']);
-        $role = Role::create(['name' => 'Super Admin']);
-        $role = Role::create(['name' => 'Admin Provinsi']);
-        $role = Role::create(['name' => 'Admin Kabupaten']);
-
-        return "selesai";
+        if ($request->file('import_file')) {
+            Excel::import(new AlokasiImport, request()->file('import_file'));
+            // return 'Berhasil Memasukkan data';
+            return redirect()->back()->with('success', 'Berhasil Memasukkan data');
+        } else {
+            // return 'Kesalahan File';
+            return redirect()->back()->with('error', 'Kesalahan File');
+        }
     }
+
+
+    // public function make_roles()
+    // {
+    //     $role = Role::create(['name' => 'PPL']);
+    //     $role = Role::create(['name' => 'PML']);
+    //     $role = Role::create(['name' => 'Koseka']);
+    //     $role = Role::create(['name' => 'Super Admin']);
+    //     $role = Role::create(['name' => 'Admin Provinsi']);
+    //     $role = Role::create(['name' => 'Admin Kabupaten']);
+    //     return "selesai";
+    // }
 }
